added bootstrap cards

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 </head>
 <body>
 <div class="container page">
+    <!-- header row -->
     <div class="row align-items-center header">
         <div class="col-sm">
             <h1>Id blanditiis quasi accusamus</h1>
             <p style="color:grey">aliquid consectetur ducimus rerum qui et fuga quod.</p>
         </div>
     </div>
+    <!-- content row -->
     <div class="row align-items-center content">
         <div class="col-sm">
             
@@ -94,7 +96,38 @@
                     <span class="visually-hidden">Next</span>
                 </a>
             </div>
-
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+            <div class="card">
+                <img src="images/tile_bg-light.png" class="card-img-top" alt="image">
+                <div class="card-body">
+                    <h5 class="card-title">Card 1 of 3</h5>
+                    <p class="card-text">Lorem ipsum dolor sit.</p>
+                    <a href="#" class="btn btn-dark">BUTON GO TOP</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <div class="card">
+                <img src="images/tile_bg-light.png" class="card-img-top" alt="image">
+                <div class="card-body">
+                    <h5 class="card-title">Card 1 of 3</h5>
+                    <p class="card-text">Lorem ipsum dolor sit.</p>
+                    <a href="#" class="btn btn-dark">BUTON GO TOP</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <div class="card">
+                <img src="images/tile_bg-light.png" class="card-img-top" alt="image">
+                <div class="card-body">
+                    <h5 class="card-title">Card 1 of 3</h5>
+                    <p class="card-text">Lorem ipsum dolor sit.</p>
+                    <a href="#" class="btn btn-dark">BUTON GO TOP</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
