updated images adjusted cards

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="row">
         <div class="col-sm">
             <div class="card">
-                <img src="images/tile_bg-light.png" class="card-img-top" alt="image">
+                <img src="images/card_1.png" class="card-img-top" alt="image">
                 <div class="card-body">
                     <h5 class="card-title">Card 1 of 3</h5>
                     <p class="card-text">Lorem ipsum dolor sit.</p>
@@ -111,9 +111,9 @@
         </div>
         <div class="col-sm">
             <div class="card">
-                <img src="images/tile_bg-light.png" class="card-img-top" alt="image">
+                <img src="images/card_2.png" class="card-img-top" alt="image">
                 <div class="card-body">
-                    <h5 class="card-title">Card 1 of 3</h5>
+                    <h5 class="card-title">Card 2 of 3</h5>
                     <p class="card-text">Lorem ipsum dolor sit.</p>
                     <a href="#" class="btn btn-dark">BUTON GO TOP</a>
                 </div>
@@ -121,9 +121,9 @@
         </div>
         <div class="col-sm">
             <div class="card">
-                <img src="images/tile_bg-light.png" class="card-img-top" alt="image">
+                <img src="images/card_3.png" class="card-img-top" alt="image">
                 <div class="card-body">
-                    <h5 class="card-title">Card 1 of 3</h5>
+                    <h5 class="card-title">Card 3 of 3</h5>
                     <p class="card-text">Lorem ipsum dolor sit.</p>
                     <a href="#" class="btn btn-dark">BUTON GO TOP</a>
                 </div>
