added some more style

--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
     <!-- Header row -->
     <div class="row align-items-center header">
         <div class="col-sm">
-            <h1>Id blanditiis quasi accusamus</h1>
-            <p style="color:grey">aliquid consectetur ducimus rerum qui et fuga quod.</p>
+            <div class="d-flex justify-content-center">
+                <h1>Id blanditiis</h1>
+            </div>
+            <div class="d-flex justify-content-center">
+                <h2>quasi accusamus</h2>
+            </div>
+            <div class="d-flex justify-content-center">
+                <p style="color:black">aliquid consectetur ducimus rerum qui et fuga quod.</p>
+            </div>
         </div>
     </div>
     <!-- Carousel row -->
@@ -99,7 +106,7 @@
         </div>
     </div>
     <!-- Card Row -->
-    <div class="row">
+    <div class="row cards">
         <div class="col-sm">
             <div class="card">
                 <img src="images/card_1.png" class="card-img-top" alt="image">
@@ -130,6 +137,17 @@
                     <a href="#" class="btn btn-dark">GO TO TOP</a>
                 </div>
             </div>
+        </div>
+    </div>
+    <!-- footer row -->
+    <div class="row align-items-center footer">
+        <div class="col-sm">
+            <div class="d-flex justify-content-center">
+                <h5 style="color:white;">Lorem, ipsum dolor.</h5>
+            </div>
+                <div class="d-flex justify-content-center">
+                <p style="color:white;">aliquid consectetur ducimus rerum qui et fuga quod.</p>
+            </h5>
         </div>
     </div>
 </div>
